[Oleksii Datsiuk] Achieved tru at-least-once delivery